# telegram-downloader

./: .env.example  .gitignore  Logger.py  README.md  bookmatcher.py  main.py  pyproject.toml
config/: settings.py
downloader/: client.py  downloader.py  logger.py  utils.py
