[tool.poetry]
name = "telegram-downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.37.0"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
tqdm = "^4.66.5"

[tool.poetry.scripts]
telegram-downloader = "main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"